logs/purity.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/purity'...
Compiling './lib/python3.5/site-packages/purity/canvas.py'...
***   File "./lib/python3.5/site-packages/purity/canvas.py", line 241
    print "objects"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/purity/client.py'...
***   File "./lib/python3.5/site-packages/purity/client.py", line 107
    print "received __pong__", args
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/purity/data'...
Listing './lib/python3.5/site-packages/purity/examples'...
Compiling './lib/python3.5/site-packages/purity/examples/gtksampler.py'...
***   File "./lib/python3.5/site-packages/purity/examples/gtksampler.py", line 229
    print "Rec %d" % (info)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/purity/fudi.py'...
***   File "./lib/python3.5/site-packages/purity/fudi.py", line 69
    print "FUDI: data:", data
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/purity/process.py'...
***   File "./lib/python3.5/site-packages/purity/process.py", line 180
    except error.AlreadyCancelled, e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/purity/test'...
Listing './lib/python3.5/site-packages/purity-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
